[package]
name = ""
version = "0.0.0"
authors = [""]
keywords = ["dictionary"]
license = ""
homepage = ""
repository = ""
documentation = ""
description = ""
readme = "README.rst"

[lib]
name = "cargo"
path = "src/cargo/lib.rs"

[dependencies]
advapi32-sys = "0.1"
crates-io = { path = "src/crates-io", version = "0.1" }

[dev-dependencies]
tempdir = "0.3"
hyper = "*"

[profile.dev]

opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.release]

opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[[bin]]
name = ""
test = false
doc = false

[[test]]
name = "tests"

[[test]]
name = "resolve"
