[package]
name = "hello"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]

[dependencies.core]
git = "https://github.com/phil-opp/nightly-libcore.git"
features = ["disable_float"]    # No CPU instructions that write to floating-point registers

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
